delete api changes..

--- a/packages/code-server/code-server-lib/src/main/resources/api/WorkspaceRecipe.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/WorkspaceRecipe.yaml
@@ -196,6 +196,36 @@ paths:
         500:
           description: "Internal error"
 
+    delete:
+      tags:
+        - "code-server-recipe"
+      summary: "Delete recipe with given Id."
+      description: "Delete recipe for a given identifier."
+      operationId: "deleteRecipe"
+      parameters:
+        - name: "recipeName"
+          in: "path"
+          description: "recipe to be deleted"
+          required: true
+          type: "string"
+      responses:
+        201:
+          description: "Returns message of success or failure"
+          schema:
+            $ref: "#/definitions/GenericMessage"
+        204:
+          description: "Fetch complete, no content found."
+        400:
+          description: "Bad request."
+        401:
+          description: "Request does not have sufficient credentials."
+        403:
+          description: "Request is not authorized."
+        405:
+          description: "Method not allowed"
+        500:
+          description: "Internal error"
+
   /recipeDetails/softwareLov:
     get:
       tags:
