--- a/packages/code-server/code-server-lib/src/main/resources/api/WorkspaceRecipe.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/WorkspaceRecipe.yaml
@@ -196,6 +196,36 @@ paths:
         500:
           description: "Internal error"
 
+    delete:
+      tags:
+        - "code-server-recipe"
+      summary: "Delete recipe with given Id."
+      description: "Delete recipe for a given identifier."
+      operationId: "deleteRecipe"
+      parameters:
+        - name: "recipeName"
+          in: "path"
+          description: "recipe to be deleted"
+          required: true
+          type: "string"
+      responses:
+        201:
+          description: "Returns message of success or failure"
+          schema:
+            $ref: "#/definitions/GenericMessage"
+        204:
+          description: "Fetch complete, no content found."
+        400:
+          description: "Bad request."
+        401:
+          description: "Request does not have sufficient credentials."
+        403:
+          description: "Request is not authorized."
+        405:
+          description: "Method not allowed"
+        500:
+          description: "Internal error"
+
   /recipeDetails/softwareLov:
     get:
       tags:
@@ -223,7 +253,7 @@ paths:
         500:
           description: "Internal error"
 
-  /recipeDetails/recipeLov:
+  /recipeDetails/recipelov:
     get:
       tags:
         - "code-server-recipe"
@@ -250,103 +280,103 @@ paths:
         500:
           description: "Internal error"
 
-  /recipeDetails/recipesByStatus:
-      get:
-        tags:
-          - "code-server-recipe"
-        summary: "Get all recipes which are in requested and accepted state, waiting for processing."
-        description: "Get all recipes which are in requested and accepted state, waiting for processing"
-        operationId: "getAllRecipesWhichAreInRequestedAndAcceptedState"
-        parameters:
-            - name: offset
-              in: query
-              description: page number from which listing of SecurityConfigs should start. Offset. Example 2
-              required: false
-              type: integer
-            - name: limit
-              in: query
-              description: page size to limit the number of SecurityConfigs, Example 15
-              required: false
-              type: integer
-        responses:
-          201:
-            description: "Returns message of success or failure"
-            schema:
-              $ref: "#/definitions/RecipeCollectionVO"
-          204:
-            description: "Fetch complete, no content found."
-          400:
-            description: "Bad request."
-          401:
-            description: "Request does not have sufficient credentials."
-          403:
-            description: "Request is not authorized."
-          405:
-            description: "Method not allowed"
-          500:
-            description: "Internal error"
+  # /recipeDetails/recipesByStatus:
+  #     get:
+  #       tags:
+  #         - "code-server-recipe"
+  #       summary: "Get all recipes which are in requested and accepted state, waiting for processing."
+  #       description: "Get all recipes which are in requested and accepted state, waiting for processing"
+  #       operationId: "getAllRecipesWhichAreInRequestedAndAcceptedState"
+  #       parameters:
+  #           - name: offset
+  #             in: query
+  #             description: page number from which listing of SecurityConfigs should start. Offset. Example 2
+  #             required: false
+  #             type: integer
+  #           - name: limit
+  #             in: query
+  #             description: page size to limit the number of SecurityConfigs, Example 15
+  #             required: false
+  #             type: integer
+  #       responses:
+  #         201:
+  #           description: "Returns message of success or failure"
+  #           schema:
+  #             $ref: "#/definitions/RecipeCollectionVO"
+  #         204:
+  #           description: "Fetch complete, no content found."
+  #         400:
+  #           description: "Bad request."
+  #         401:
+  #           description: "Request does not have sufficient credentials."
+  #         403:
+  #           description: "Request is not authorized."
+  #         405:
+  #           description: "Method not allowed"
+  #         500:
+  #           description: "Internal error"
 
-  /recipeDetails/{name}/accept:        
-    post:
-      tags:
-        - "code-server-recipe"
-      summary: "Accepting the changes to be added in access management , marking status as Accepted if success"
-      description: "Accepting the changes to be added in access management system"
-      operationId: "acceptRecipeInfo"
-      parameters:
-        - name: "name"
-          in: "path"
-          description: "Recipe name to be fetched"
-          required: true
-          type: "string"
-      responses:
-        201:
-          description: "Returns message of success or failure"
-          schema:
-            $ref: "#/definitions/GenericMessage"
-        204:
-          description: "Fetch complete, no content found."
-        400:
-          description: "Bad request."
-        401:
-          description: "Request does not have sufficient credentials."
-        403:
-          description: "Request is not authorized."
-        405:
-          description: "Method not allowed"
-        500:
-          description: "Internal error"
+  # /recipeDetails/{name}/accept:        
+  #   post:
+  #     tags:
+  #       - "code-server-recipe"
+  #     summary: "Accepting the changes to be added in access management , marking status as Accepted if success"
+  #     description: "Accepting the changes to be added in access management system"
+  #     operationId: "acceptRecipeInfo"
+  #     parameters:
+  #       - name: "name"
+  #         in: "path"
+  #         description: "Recipe name to be fetched"
+  #         required: true
+  #         type: "string"
+  #     responses:
+  #       201:
+  #         description: "Returns message of success or failure"
+  #         schema:
+  #           $ref: "#/definitions/GenericMessage"
+  #       204:
+  #         description: "Fetch complete, no content found."
+  #       400:
+  #         description: "Bad request."
+  #       401:
+  #         description: "Request does not have sufficient credentials."
+  #       403:
+  #         description: "Request is not authorized."
+  #       405:
+  #         description: "Method not allowed"
+  #       500:
+  #         description: "Internal error"
           
-  /recipeDetails/{name}/publish:        
-    post:
-      tags:
-        - "code-server-recipe"
-      summary: "Marking status after Publishing the changes added in access management system"
-      description: "Marking status after Publishing the changes added in access management system"
-      operationId: "publishRecipeInfo"
-      parameters:
-        - name: "name"
-          in: "path"
-          description: "recipe name to be fetched"
-          required: true
-          type: "string"
-      responses:
-        201:
-          description: "Returns message of success or failure"
-          schema:
-            $ref: "#/definitions/GenericMessage"
-        204:
-          description: "Fetch complete, no content found."
-        400:
-          description: "Bad request."
-        401:
-          description: "Request does not have sufficient credentials."
-        403:
-          description: "Request is not authorized."
-        405:
-          description: "Method not allowed"
-        500:
-          description: "Internal error"
+  # /recipeDetails/{name}/publish:        
+  #   post:
+  #     tags:
+  #       - "code-server-recipe"
+  #     summary: "Marking status after Publishing the changes added in access management system"
+  #     description: "Marking status after Publishing the changes added in access management system"
+  #     operationId: "publishRecipeInfo"
+  #     parameters:
+  #       - name: "name"
+  #         in: "path"
+  #         description: "recipe name to be fetched"
+  #         required: true
+  #         type: "string"
+  #     responses:
+  #       201:
+  #         description: "Returns message of success or failure"
+  #         schema:
+  #           $ref: "#/definitions/GenericMessage"
+  #       204:
+  #         description: "Fetch complete, no content found."
+  #       400:
+  #         description: "Bad request."
+  #       401:
+  #         description: "Request does not have sufficient credentials."
+  #       403:
+  #         description: "Request is not authorized."
+  #       405:
+  #         description: "Method not allowed"
+  #       500:
+  #         description: "Internal error"
 
 definitions:
   GitHubVo:
@@ -413,23 +443,31 @@ definitions:
       isPublic:
         type: boolean
         default: true
-      users:
-        type: array
-        items:
-          $ref: "#/definitions/UserInfoVO" 
-      status:
+      gitPath:
         type: string
-        description: "status of the recipe"
+        description: "git path for recipe"
+      gitRepoLoc:
+        type: string
+        description: "git repository location for recipe"
+      deployPath:
+        type: string
+        description: "deploy path for recipe" 
+      toDeployType:
+        type: string
+      # users:
+      #   type: array
+      #   items:
+      #     $ref: "#/definitions/UserInfoVO" 
+      # status:
+      #   type: string
+      #   description: "status of the recipe"
 
   RecipeSoftwareVO:
     type: object
     properties:
-      name:
+      softwareName:
         type: string
-        description: "Operating system required"
-      version:
-        type: string
-        description: "version of software"
+        description: "version and name of software for recipe"
         
   RecipeCollectionVO:
     type: object
@@ -515,6 +553,13 @@ definitions:
       recipeName:
         type: string
         description: "name of the recipe"
+      osName:
+        type: string
+      maxRam:
+        type: string
+      maxCpu:
+        type: string
+
 
   SoftwareCollection:
     type: object
