recipe-front-end-changes

--- a/packages/frontend/.docker.env
+++ b/packages/frontend/.docker.env
@@ -57,6 +57,8 @@ CODESPACE_OPENSEARCH_LOGS_URL=${PROJECTSMO_CODESPACE_OPENSEARCH_LOGS_URL}
 CODESPACE_OPENSEARCH_BUILD_LOGS_URL=${PROJECTSMO_CODESPACE_OPENSEARCH_BUILD_LOGS_URL}
 CODESPACE_OIDC_POPUP_URL: ${CODESPACE_OIDC_POPUP_URL},  
 CODESPACE_OIDC_POPUP_WAIT_TIME: ${CODESPACE_OIDC_POPUP_WAIT_TIME},
+CODESPACE_HARDWARE_REQUEST_TEMPLATE:${CODESPACE_HARDWARE_REQUEST_TEMPLATE},
+CODESPACE_SOFTWARE_REQUEST_TEMPLATE:${CODESPACE_SOFTWARE_REQUEST_TEMPLATE},
 VAULT_API_BASEURL: ${VAULT_API_BASEURL},
 SIMILARITY_SEARCH_API_BASEURL: ${SIMILARITY_SEARCH_API_BASEURL},
 ENABLE_CHRONOS_FORECASTING_SERVICE=${PROJECTMO_ENABLE_CHRONOS_FORECASTING_SERVICE}
