--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -124,6 +124,8 @@ CODESPACE_OPENSEARCH_LOGS_URL=
 CODESPACE_OPENSEARCH_BUILD_LOGS_URL=
 CODESPACE_OIDC_POPUP_URL=,
 CODESPACE_OIDC_POPUP_WAIT_TIME=,
+CODESPACE_HARDWARE_REQUEST_TEMPLATE=
+CODESPACE_SOFTWARE_REQUEST_TEMPLATE=
 VAULT_API_BASEURL=
 SIMILARITY_SEARCH_API_BASEURL=
 
