--- a/packages/dataentry-mfe/.env
+++ b/packages/dataentry-mfe/.env
@@ -1,6 +1,7 @@
 CONTAINER_APP_URL= http://localhost:9090
 API_BASEURL= 
 DATA_ENTRY_API_BASEURL= 
+DATALAKE_API_BASEURL= 
 REPORTS_API_BASEURL=
 STORAGE_API_BASEURL=
 TOU_HTML= 
