--- a/packages/dataentry-mfe/package.json
+++ b/packages/dataentry-mfe/package.json
@@ -74,6 +74,7 @@
     "@univerjs/engine-formula": "^0.1.7",
     "@univerjs/engine-numfmt": "^0.1.7",
     "@univerjs/engine-render": "^0.1.7",
+    "@univerjs/rpc": "^0.1.14",
     "@univerjs/sheets": "^0.1.7",
     "@univerjs/sheets-formula": "^0.1.7",
     "@univerjs/sheets-numfmt": "^0.1.7",
@@ -105,6 +106,7 @@
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "url-loader": "^4.1.1",
+    "uuid": "^9.0.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3",
