Added notification preferenes for datalake and dataentry servives

--- a/packages/backend/dnambc-lib/src/main/resources/api/UserNotificationPreference.yaml
+++ b/packages/backend/dnambc-lib/src/main/resources/api/UserNotificationPreference.yaml
@@ -162,6 +162,10 @@ definitions:
     codespaceNotificationPref:
       $ref: "#/definitions/NotificationPreferenceVO"
     airflowNotificationPref:
+      $ref: "#/definitions/NotificationPreferenceVO"
+    dataLakeNotificationPref:
+      $ref: "#/definitions/NotificationPreferenceVO"
+    dataEntryNotificationPref:
       $ref: "#/definitions/NotificationPreferenceVO"                 
   required:
      - userId
