--- a/packages/code-space-mfe/package.json
+++ b/packages/code-space-mfe/package.json
@@ -72,6 +72,7 @@
     "classnames": "^2.3.1",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.5",
+    "event-source-polyfill": "^1.0.31",
     "env-cmd": "^10.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
@@ -104,6 +105,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/runtime": "^7.18.6",
     "@module-federation/fmr": "^0.0.7",
+    "@types/event-source-polyfill": "^1.0.5",
     "buffer": "^6.0.3",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
