changes to add department feild in department lov

--- a/packages/code-server/code-server-lib/src/main/resources/application.yml
+++ b/packages/code-server/code-server-lib/src/main/resources/application.yml
@@ -58,7 +58,10 @@ codeserver:
   userauth: ${CODESERVER_USERAUTH:XXXX}
     
 authenticator:
-   uri: ${AUTHENTICATOR_URI:XXXX}  
+   uri: ${AUTHENTICATOR_URI:XXXX} 
+
+dashboard:
+    uri: ${DASHBOARD_URI:XXXX} 
   
 kafka:
   centralTopic:
