--- a/packages/code-space-mfe/.docker.env
+++ b/packages/code-space-mfe/.docker.env
@@ -7,6 +7,8 @@ CODESPACE_OPENSEARCH_LOGS_URL=${PROJECTSMO_CODESPACE_OPENSEARCH_LOGS_URL}
 CODESPACE_OPENSEARCH_BUILD_LOGS_URL=${PROJECTSMO_CODESPACE_OPENSEARCH_BUILD_LOGS_URL}
 CODESPACE_OIDC_POPUP_URL=${PROJECTSMO_CODESPACE_OIDC_POPUP_URL}  
 CODESPACE_OIDC_POPUP_WAIT_TIME=${PROJECTSMO_CODESPACE_OIDC_POPUP_WAIT_TIME}
+CODESPACE_HARDWARE_REQUEST_TEMPLATE=${CODESPACE_HARDWARE_REQUEST_TEMPLATE}
+CODESPACE_SOFTWARE_REQUEST_TEMPLATE=${CODESPACE_SOFTWARE_REQUEST_TEMPLATE}
 VAULT_API_BASEURL=${PROJECTSMO_VAULT_API_BASEURL}
 REPORTS_API_BASEURL=${PROJECTSMO_REPORTS_API_BASEURL}
 STORAGE_API_BASEURL=${PROJECTSMO_STORAGE_API_BASEURL}
