--- a/deployment/kubernetes/helm/charts/redis/templates/secret.yaml
+++ b/deployment/kubernetes/helm/charts/redis/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.auth.enabled (not .Values.auth.existingSecret) -}}
+{{- if and .Values.auth.enabled (not .Values.auth.existingSecret) (not .Values.auth.usePasswordFiles) -}}
 apiVersion: v1
 kind: Secret
 metadata:
