--- a/deployment/kubernetes/helm/charts/redis/templates/master/application.yaml
+++ b/deployment/kubernetes/helm/charts/redis/templates/master/application.yaml
@@ -43,7 +43,9 @@ spec:
         {{- end }}
         checksum/health: {{ include (print $.Template.BasePath "/health-configmap.yaml") . | sha256sum }}
         checksum/scripts: {{ include (print $.Template.BasePath "/scripts-configmap.yaml") . | sha256sum }}
+        {{- if and .Values.auth.enabled (not .Values.auth.existingSecret) (not .Values.auth.usePasswordFiles) -}}
         checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
+        {{- end -}}
         {{- if .Values.master.podAnnotations }}
         {{- include "common.tplvalues.render" ( dict "value" .Values.master.podAnnotations "context" $ ) | nindent 8 }}
         {{- end }}
@@ -129,7 +131,7 @@ spec:
             {{- if .Values.auth.enabled }}
             {{- if .Values.auth.usePasswordFiles }}
             - name: REDIS_PASSWORD_FILE
-              value: "/vault/secrets/redis-password"
+              value: "/vault/secrets/redis-password-new"
             {{- else }}
             - name: REDIS_PASSWORD
               valueFrom:
@@ -224,10 +226,10 @@ spec:
               mountPath: /opt/bitnami/scripts/start-scripts
             - name: health
               mountPath: /health
-            {{- if .Values.auth.usePasswordFiles }}
-            - name: redis-password
-              mountPath: /vault/secrets/
-            {{- end }}
+            # {{- if .Values.auth.usePasswordFiles }}
+            # - name: redis-password
+            #   mountPath: /vault/secrets/
+            # {{- end }}
             - name: redis-data
               mountPath: {{ .Values.master.persistence.path }}
               subPath: {{ .Values.master.persistence.subPath }}
@@ -380,7 +382,7 @@ spec:
           configMap:
             name: {{ printf "%s-health" (include "common.names.fullname" .) }}
             defaultMode: 0755
-        {{- if .Values.auth.usePasswordFiles }}
+        {{- if (not .Values.auth.usePasswordFiles) }}
         - name: redis-password
           secret:
             secretName: {{ template "redis.secretName" . }}
