--- a/packages/chronos/chronos-lib/src/main/resources/application.yml
+++ b/packages/chronos/chronos-lib/src/main/resources/application.yml
@@ -19,15 +19,19 @@ spring:
         protocol: SSL
   cloud:
     vault:
-      host: ${VAULT_HOST:localhost}
-      port: ${VAULT_PORT:8200}
-      scheme: ${VAULT_SCHEME:http}
-      authentication: ${VAULT_AUTHENTICATION:TOKEN}
-      token: ${VAULT_TOKEN:xxxx-xxxx-xxxx-xxxx}
-      mountpath: ${VAULT_MOUNTPATH:kv}
-      vaultpath: ${VAULT_PATH:dna/chronos}
+      uri: ${VAULT_URI:xxxx}
+      namespace: ${VAULT_NAMESPACE:xxxx}
+      mountpath: ${VAULT_MOUNTPATH:xxxx}
+      authentication: ${VAULT_AUTHENTICATION:xxxx}
+      kubernetes:
+        role: ${VAULT_ROLE:xxxx}
+        service-account-token-file: ${KUBERNETES_SA_TOKEN_PATH:xxxx}
+        kubernetes-path: ${VAULT_AUTH_PATH:xxxx}
+      vaultpath: ${VAULT_PATH:xxxx}
       kv:
-       enabled: true
+       enabled: true  
+      ssl:
+        enabled: false
     stream:
       function:
         bindings:
