addition of isUseCaseOwner field for solution team members

--- a/packages/backend/dnambc-lib/src/main/resources/api/Solution.yaml
+++ b/packages/backend/dnambc-lib/src/main/resources/api/Solution.yaml
@@ -754,6 +754,9 @@ definitions:
       teamMemberPosition:
         type: string
         description: "Position of team member in project"
+      isUseCaseOwner:
+        type: boolean
+        description: "Indicidates whether the team member is use case owner or not. Boolean value true/false"
 #    required:
 #      - teamMemberPosition
 
