updated univerjs for data etnry

--- a/packages/dataentry-mfe/package.json
+++ b/packages/dataentry-mfe/package.json
@@ -65,22 +65,20 @@
     ]
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.10.6",
-    "@reduxjs/toolkit": "^2.2.1",
-    "@univerjs/core": "^0.1.7",
-    "@univerjs/design": "^0.1.7",
-    "@univerjs/docs": "^0.1.7",
-    "@univerjs/docs-ui": "^0.1.7",
-    "@univerjs/engine-formula": "^0.1.7",
-    "@univerjs/engine-numfmt": "^0.1.7",
-    "@univerjs/engine-render": "^0.1.7",
-    "@univerjs/rpc": "^0.1.14",
-    "@univerjs/sheets": "^0.1.7",
-    "@univerjs/sheets-formula": "^0.1.7",
-    "@univerjs/sheets-numfmt": "^0.1.7",
-    "@univerjs/sheets-ui": "^0.1.7",
-    "@univerjs/ui": "^0.1.7",
-    "@wendellhu/redi": "^0.13.0",
+    "@grpc/grpc-js": "^1.9.14",
+    "@univerjs/core": "^0.1.17",
+    "@univerjs/design": "^0.1.17",
+    "@univerjs/docs": "^0.1.17",
+    "@univerjs/docs-ui": "^0.1.17",
+    "@univerjs/engine-formula": "^0.1.17",
+    "@univerjs/engine-numfmt": "^0.1.17",
+    "@univerjs/engine-render": "^0.1.17",
+    "@univerjs/rpc": "^0.1.7",
+    "@univerjs/sheets": "^0.1.17",
+    "@univerjs/sheets-formula": "^0.1.17",
+    "@univerjs/sheets-ui": "^0.1.17",
+    "@univerjs/ui": "^0.1.17",
+    "@wendellhu/redi": "^0.15.4",
     "axios": "^1.6.8",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.5",
@@ -122,6 +120,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/runtime": "^7.18.6",
     "@module-federation/fmr": "^0.0.7",
+    "@univerjs/webpack-plugin": "^0.4.4",
     "buffer": "^6.0.3",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
@@ -139,7 +138,6 @@
     "external-remotes-plugin": "^1.0.0",
     "husky": "^8.0.1",
     "mini-css-extract-plugin": "^2.6.1",
-    "node-sass": "^7.0.1",
     "postcss": "^8.4.14",
     "postcss-preset-env": "^7.7.2",
     "prettier": "^2.7.1",
