--- a/packages/chronos-mfe/package.json
+++ b/packages/chronos-mfe/package.json
@@ -93,7 +93,7 @@
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "url-loader": "^4.1.1",
-    "webpack": "^5.73.0",
+    "webpack": "5.92.1",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3",
     "webpack-merge": "^5.8.0",
