--- a/packages/storage-mfe/package.json
+++ b/packages/storage-mfe/package.json
@@ -36,7 +36,7 @@
     "sass-loader": "^12.6.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
-    "webpack": "^5.70.0",
+    "webpack": "5.92.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4",
     "webpack-server": "^0.1.2"
