--- a/packages/storage-mfe/.docker.env
+++ b/packages/storage-mfe/.docker.env
@@ -6,3 +6,4 @@ TOU_HTML=${PROJECTSMO_STORAGE_TOU_HTML}
 ENABLE_DATA_CLASSIFICATION_SECRET= ${PROJECTSMO_ENABLE_DATA_CLASSIFICATION_SECRET}
 TRINO_API_BASEURL= ${PROJECTSMO_TRINO_API_BASEURL}
 ENABLE_TRINO_PUBLISH= ${PROJECTSMO_ENABLE_TRINO_PUBLISH}
+STORAGE_TERMS_OF_USE_CONTENT= ${PROJECTSMO_STORAGE_TERMS_OF_USE_CONTENT}
