--- a/packages/storage-mfe/.env
+++ b/packages/storage-mfe/.env
@@ -6,3 +6,4 @@ TOU_HTML= <div>I agree to <a href='#' target="_blank" rel="noopener noreferrer">
 ENABLE_DATA_CLASSIFICATION_SECRET=false
 TRINO_API_BASEURL =
 ENABLE_TRINO_PUBLISH =
+STORAGE_TERMS_OF_USE_CONTENT=
