Added one cicd sepation attribute

--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -1188,6 +1188,9 @@ definitions:
         type: string
       clientSecret:
         type: string
+      action:
+        type: string 
+        description: cicd action needed to be perfomed.
 
 
            
