--- a/deployment/kubernetes/helm/charts/backend/values.yaml
+++ b/deployment/kubernetes/helm/charts/backend/values.yaml
@@ -22,7 +22,9 @@ ingress:
 app:
   backend:
     replicaCount: 1
-    image: backend:latest
+    image:
+      repository: ""
+      tag: ""      
     secrets: 
       name: app-secrets
       notebookSecretToken: ""
