--- a/deployment/kubernetes/helm/charts/clamav/values.yaml
+++ b/deployment/kubernetes/helm/charts/clamav/values.yaml
@@ -9,7 +9,9 @@ securityContext:
 app:
   backend:
     name: clamav-rest
-    image: ""
+    image:
+      repository: ""
+      tag: ""
     replicaCount: 1
     secrets:
       name: oneapi-secrets
