updated the helm deployment template for Airflow

--- a/deployment/kubernetes/helm/charts/airflow/templates/backend/deployment.yaml
+++ b/deployment/kubernetes/helm/charts/airflow/templates/backend/deployment.yaml
@@ -51,8 +51,8 @@ spec:
             matchLabels:
               name: {{ .Chart.Name }}-backend       
       containers:
-        - name: {{ .Chart.Name }}-backend-rest
-          image: {{ .Values.backend.image }}
+        - name: {{ .Chart.Name }}-backend-rest          
+          image: "{{ .Values.backend.image.repository }}:{{ .Values.backend.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: Always
           {{- if .Values.vaultInjector.enable }}           
           command: ["/bin/sh", "-c"]
